# nlomop

./: .env.example  .gitignore  CLAUDE.md  DATA_DICTIONARY.md  LICENSE  PRODUCT_SPEC.md  README.md  pyproject.toml  synthea10_report.html
app/: agent.py  concept_cache.py  config.py  datasources.py  db.py  explain.py  llm.py  main.py  models.py  prompts.py
app/analysis/: __init__.py  comparative.py  correlation.py  models.py  odds_ratio.py  pre_post.py  survival.py
scripts/: create_indexes.sql
static/: app.js  index.html  style.css
